--- a/hello.cabal
+++ b/hello.cabal
@@ -33,6 +33,9 @@ flag threaded
 executable hello
   hs-source-dirs: src
   main-is: hello.hs
+  other-modules: NixProtocol
+              , SocketDuplex
+  ghc-options: -Wall
   build-depends: base
                , binary
                , bytestring
@@ -49,6 +52,8 @@ executable hello
                , transformers
                , transformers-except
                , text
+               , ghc
+               , formatting
 
   if flag(threaded)
      ghc-options: -threaded
